Created new class and xml Can save and retrieve data saved

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".LoginActivity" />
         <activity android:name=".ProfileActivity" />
         <activity android:name=".ChangeProfile" />
+        <activity android:name=".UploadPhoto"></activity>
     </application>
 
 </manifest>
